# randomnamecord

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/commands/: names.rs
src/resources/: lut.json  maps.rs  mod.rs  types.rs  usage_maps.rs
